mixed: hold user & fix user title
