# src/app/DTO/User/UpdateUserDTO.php
@@ -7,23 +7,19 @@ use App\Http\Requests\User\UpdateUserRequest;
 class UpdateUserDTO
 {
     public function __construct(
-        readonly public string $username,
         readonly public string $fullname,
         readonly public string $departmentId,
-        readonly public string $email,
         readonly public string $userTitleId,
         readonly public string $workPlace,
-        readonly public boolean $status,
+        readonly public bool $status,
         readonly public mixed $document,
     ) {}
 
     public static function fromRequest(UpdateUserRequest $request): UpdateUserDTO
     {
         return new self(
-            username: $request->validated('username'),
             fullname: $request->validated('fullname'),
             departmentId: $request->validated('departmentId'),
-            email: $request->validated('email'),
             userTitleId: $request->validated('userTitleId'),
             workPlace: $request->validated('workPlace'),
             status: $request->validated('status'),
@@ -34,10 +30,8 @@ class UpdateUserDTO
     public function build(): array
     {
         $arr = [
-            'username' => $this->username,
             'fullname' => $this->fullname,
             'department_id' => $this->departmentId,
-            'email' => $this->email,
             'user_title_id' => $this->userTitleId,
             'work_place' => $this->workPlace,
             'status' => $this->status,
